[gd_scene load_steps=3 format=1]

[ext_resource path="res://images/menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/options_scene.gd" type="Script" id=2]

[node name="Root" type="Sprite"]

transform/pos = Vector2( 963.526, 541.421 )
transform/scale = Vector2( 0.999807, 0.844672 )
texture = ExtResource( 1 )
script/script = ExtResource( 2 )

[node name="OptionsMenu" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -872.0
margin/top = -540.0
margin/right = 872.0
margin/bottom = 540.0

[node name="Panel" type="Panel" parent="OptionsMenu"]

visibility/opacity = 0.78
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 3.0
margin/right = 200.0
margin/bottom = -4.0

[node name="BackButton" type="Button" parent="OptionsMenu/Panel"]

anchor/top = 1
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 100.0
margin/right = 142.0
margin/bottom = 1001.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="Container" type="Container" parent="OptionsMenu/Panel"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.199446
margin/top = 0.0999075
margin/right = 0.799861
margin/bottom = 0.79926

[node name="SoundButton" type="Button" parent="OptionsMenu/Panel/Container"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.289683
margin/right = 0.333333
margin/bottom = 0.316138
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Sound"
flat = false

[node name="InputButton" type="Button" parent="OptionsMenu/Panel/Container"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.579365
margin/right = 0.333333
margin/bottom = 0.60582
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Input"
flat = false

[node name="GraphicsButton" type="Button" parent="OptionsMenu/Panel/Container"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.333333
margin/bottom = 0.026455
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Graphics"
flat = false

[node name="GraphicsMenu" type="Container" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -872.0
margin/top = -540.0
margin/right = 872.0
margin/bottom = 540.0

[node name="Panel" type="Panel" parent="GraphicsMenu"]

visibility/opacity = 0.78
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 3.0
margin/right = 200.0
margin/bottom = -4.0

[node name="BackGraphicsButton" type="Button" parent="GraphicsMenu/Panel"]

anchor/top = 1
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 100.0
margin/right = 142.0
margin/bottom = 1001.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="Container" type="Container" parent="GraphicsMenu/Panel"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.199446
margin/top = 0.145236
margin/right = 0.799169
margin/bottom = 0.827937

[node name="FullScreenCheck" type="CheckBox" parent="GraphicsMenu/Panel/Container"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 26.0
margin/bottom = 23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Label" type="Label" parent="GraphicsMenu/Panel/Container/FullScreenCheck"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 4.0
margin/right = 0.0
margin/bottom = 0.0
text = "Plein Ã©cran"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Title" type="Label" parent="GraphicsMenu/Panel"]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 111.0
margin/top = 50.0
margin/right = 0.0
margin/bottom = 64.0
text = "Graphics Options"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SoundMenu" type="Container" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -872.0
margin/top = -540.0
margin/right = 872.0
margin/bottom = 540.0

[node name="Panel" type="Panel" parent="SoundMenu"]

visibility/opacity = 0.78
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 3.0
margin/right = 200.0
margin/bottom = -4.0

[node name="BackSoundButton" type="Button" parent="SoundMenu/Panel"]

anchor/top = 1
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 100.0
margin/right = 142.0
margin/bottom = 1001.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="Container" type="Container" parent="SoundMenu/Panel"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.199446
margin/top = 0.0999075
margin/right = 0.799861
margin/bottom = 0.79926

[node name="Title" type="Label" parent="SoundMenu/Panel"]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 94.0
margin/top = 50.0
margin/right = 24.0
margin/bottom = 64.0
text = "Sound Options"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="InputMenu" type="Container" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -872.0
margin/top = -540.0
margin/right = 872.0
margin/bottom = 540.0

[node name="Panel" type="Panel" parent="InputMenu"]

visibility/opacity = 0.78
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 3.0
margin/right = 200.0
margin/bottom = -4.0

[node name="BackInputButton" type="Button" parent="InputMenu/Panel"]

anchor/top = 1
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 100.0
margin/right = 142.0
margin/bottom = 1001.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="Container" type="Container" parent="InputMenu/Panel"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.199446
margin/top = 0.0999075
margin/right = 0.799861
margin/bottom = 0.79926

[node name="Title" type="Label" parent="InputMenu/Panel"]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 89.0
margin/top = 50.0
margin/right = 0.0
margin/bottom = 64.0
text = "Input Options"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ProjectInfos" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="ProjectNameLabel" type="Label" parent="ProjectInfos"]

anchor/left = 1
anchor/top = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -679.0
margin/top = -540.0
margin/right = 823.0
margin/bottom = 594.0
text = "[PROJECT_NAME]"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ProjectVersion" type="Label" parent="ProjectInfos/ProjectNameLabel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 0.0
margin/right = 189.0
margin/bottom = 14.0
text = "[REVISION]"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="released" from="OptionsMenu/Panel/BackButton" to="." method="_on_BackButton_released"]

[connection signal="released" from="OptionsMenu/Panel/Container/SoundButton" to="." method="_on_SoundButton_released"]

[connection signal="released" from="OptionsMenu/Panel/Container/InputButton" to="." method="_on_InputButton_released"]

[connection signal="released" from="OptionsMenu/Panel/Container/GraphicsButton" to="." method="_on_GraphicsButton_released"]

[connection signal="released" from="GraphicsMenu/Panel/BackGraphicsButton" to="." method="_on_BackGraphicsButton_released"]

[connection signal="toggled" from="GraphicsMenu/Panel/Container/FullScreenCheck" to="." method="_on_CheckBox_toggled"]

[connection signal="released" from="SoundMenu/Panel/BackSoundButton" to="." method="_on_BackSoundButton_released"]

[connection signal="released" from="InputMenu/Panel/BackInputButton" to="." method="_on_BackInputButton_released"]


